# Fino

./: .env.sample  .envrc  .gitignore  .gitmodules  Fino.code-workspace  LICENSE  Makefile  ONBOARD.md  README.md  compose.dev.yaml  compose.yaml  fino.code-workspace  main.py  pyproject.toml  pytest.toml  ruff.toml  settings.toml
.cursor/commands/: fuga.md  hoge.md
.cursor/rules/: project.mdc
archive/infra/: package-lock.json
archive/infra/lib/hoth/: sample-hoth.ts
archive/infra/test/: fino.test.ts
archive/kamino/src/kamino.egg-info/: PKG-INFO  SOURCES.txt
cli/: command.py  config.py  main.py  pyproject.toml
cli/command/kamino/: command.py
docs/: DEV.md  LITERAL_EXPLANATION.md
dynamodb-local-data/: shared-local-instance.db
infra/: .gitignore  README.md  biome.json  cdk.json  compose.dev.yaml  package-lock.json  package.json
infra/cdk/: package-lock.json
infra/lambda/echo/metadata/: index.py
infra/lib/: fino-stack.ts
infra/lib/base/: base-stack.ts
infra/lib/echo/: api-gateway-stack.ts  api-stack.ts  context.ts  edinet-ingestion-stack.ts  edinet-ingestion-workflow-stack.ts  ingestion-state-store-stack.ts  ingestion-state-table-stack.ts  raw-storage.ts
infra/lib/echo/nested-stack/: api-gateway-stack.ts  lambda-stack.ts
infra/lib/hoth/: lakehouse-stack.ts  raw-storage-stack.ts  raw-storage.ts  sample-hoth.ts
infra/lib/util/cdk/: context.ts  naming.ts  tagging.ts
infra/scripts/: setup.sh
infra/test/: fino.test.ts
script/: create-local-dynamodb-table.sh  setup.sh
service/bespin/: grafana.ini
service/bespin/provisioning/plugins/: athena.yaml  trino.yaml
service/echo/function/edinet-doc-ingestion/: index.py  main.py  pyproject.toml  schema.py
service/echo/function/edinet-docid-register/: index.py  main.py  pyproject.toml  schema.py
service/echo/functions/edinet-doc-ingestion/: pyproject.toml
service/echo/lambda/data-access/: index.py  requirements.txt
service/echo/mock/: env.json
service/echo/mock/event/: edinet-docid-register.json
service/kamino/: pyproject.toml
service/kamino/function/edinet-doc-ingestion/: index.py
src/fino/cli/: main.py
src/fino/cli/src/command/collect/: command.py
src/fino/cli/src/fino/: main.py
src/fino/ingestion/: pyproject.toml
src/fino/ingestion/src/ingestion/edinet-doc-ingestion/: schema.py
src/kamino/: pyproject.toml
src/kamino/mock/event/: event-bridge.json
src/kamino/src/kamino.egg-info/: requires.txt  top_level.txt
