[project]
name = "fino"
version = "0.1.0"
description = "Fino - financial data platform -"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "typer>=0.20.0",
    "rich>=13.0.0",
    "dynaconf>=3.2.12",
    "aws-lambda-powertools>=3.23.0",
    "boto3>=1.41.2",
    "aws-lambda-powertools[validation]",
    "edinet-python>=0.1.0",
    "pyiceberg>=0.5.0",
    "pandas>=2.0.0",
    "aws-lambda-powertools[parser]",
]


[project.scripts]
fino = "fino.cli.main:app"


[dependency-groups]
dev = ["ruff>=0.14.8", "ruff-lsp>=0.0.1"]

[project.optional-dependencies]
# Ingestion Package
ingestion = [
    "aws-lambda-powertools>=3.23.0",
    "boto3>=1.41.2",
    "aws-lambda-powertools[validation]",
    "edinet-python>=0.1.0",
    "pyiceberg>=0.5.0",
    "pandas>=2.0.0",
]
# Collector Package
collector = [
    "aws-lambda-powertools>=3.23.0",
    "boto3>=1.41.2",
    "aws-lambda-powertools[parser]",
]
# CLI Package
cli = [
    "typer>=0.20.0",
    "rich>=13.0.0",
    "dynaconf>=3.2.12",
    "fino[ingestion]",
    "fino[collect]",
]

[tool.ruff]
line-length = 80
