[project]
name = "fino"
version = "0.1.0"
description = "Fino - financial data platform -"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
lint = ["ruff>=0.14.8", "pytest>=9.0.2"]
dev = [{ include-group = "lint" }]
