[project]
name = "kamino-service"
version = "0.1.0"
description = "Kamino Service - Ingestion workflow and raw data storage service -"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "aws-lambda-powertools>=3.23.0",
    "boto3>=1.41.2",
    "aws-lambda-powertools[validation]",
    "edinet-python>=0.1.0",
    "pyiceberg>=0.5.0",
    "pandas>=2.0.0",
]

[tool.ruff]
extend = "../../pyproject.toml"
