[project]
name = "edinet-doc-ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "aws-lambda-powertools>=3.23.0",
    "boto3>=1.41.2",
    "aws-lambda-powertools[validation]",
    "edinet-python>=0.1.0",
    "pyiceberg>=0.5.0",
    "pandas>=2.0.0"
]

[dependency-groups]
dev = []
