[project]
name = "edinet-docid-register"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "aws-lambda-powertools>=3.23.0",
    "boto3>=1.41.2",
    "aws-lambda-powertools[parser]"
]

[dependency-groups]
dev = [
    "python-lambda-local>=0.1.13",
    "setuptools>=80.9.0",
]
